<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentVectorResultWindow"
    android:layout_width="290dp"
    android:layout_height="290dp"
    android:background="@drawable/text_input"
    android:clickable="true"
    android:focusable="true"
    android:padding="10dp"
    tools:context=".FragmentVectorResultWindow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/namuko_regular"
            android:paddingStart="10dp"
            android:text="@string/solution"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/uxTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/cacual_contact_regular"
                android:gravity="center"
                android:text="@string/ux"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/uXResultEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_mono_regular"
                    android:gravity="center"
                    android:hint="@string/ux_component"
                    android:singleLine="true"
                    tools:text="ux result" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/uyTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/cacual_contact_regular"
                android:gravity="center"
                android:text="@string/uy"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/uYResultEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_mono_regular"
                    android:gravity="center"
                    android:hint="@string/uy_component"
                    android:singleLine="true"
                    tools:text="uy result" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/uzTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/cacual_contact_regular"
                android:gravity="center"
                android:text="@string/uz"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/uZResultEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_mono_regular"
                    android:gravity="center"
                    android:hint="@string/uz_component"
                    android:singleLine="true"
                    tools:text="uz result" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>