<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:visibility="visible">

    <RelativeLayout
        android:id="@+id/mainBlock"
        android:layout_width="393dp"
        android:layout_height="420dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:translationZ="110dp"
            tools:visibility="invisible">

            <fragment
                android:id="@+id/fragmentVectorResultWindow"
                android:name="com.s3n1ch.crossproduct.FragmentVectorResultWindow"
                android:layout_width="290dp"
                android:layout_height="290dp"
                android:layout_gravity="center"
                tools:layout="@layout/fragment_vector_result_window" />

            <fragment
                android:id="@+id/fragmentNumeralResultWindow"
                android:name="com.s3n1ch.crossproduct.FragmentNumeralResultWindow"
                android:layout_width="290dp"
                android:layout_height="290dp"
                android:layout_gravity="center" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:translationZ="100dp"
            android:visibility="visible">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:translationZ="100dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CoordsTextInputLayout"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginEnd="3dp"
                        app:errorTextColor="@color/error">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/a11"
                            style="@style/CoordsTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="65dp"
                            android:hint="@string/a11"
                            android:text="@string/i" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CoordsTextInputLayout"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/a12"
                            style="@style/CoordsTextInputEditText"
                            android:layout_width="85dp"
                            android:layout_height="65dp"
                            android:hint="@string/a12"
                            android:text="@string/j" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CoordsTextInputLayout"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="3dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/a13"
                            style="@style/CoordsTextInputEditText"
                            android:layout_width="85dp"
                            android:layout_height="65dp"
                            android:hint="@string/a13"
                            android:text="@string/k" />
                    </com.google.android.material.textfield.TextInputLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CoordsTextInputLayout"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginEnd="3dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/a21"
                            style="@style/CoordsTextInputEditText"
                            android:layout_width="85dp"
                            android:layout_height="65dp"
                            android:hint="@string/a21" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CoordsTextInputLayout"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/a22"
                            style="@style/CoordsTextInputEditText"
                            android:layout_width="85dp"
                            android:layout_height="65dp"
                            android:hint="@string/a22" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CoordsTextInputLayout"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="3dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/a23"
                            style="@style/CoordsTextInputEditText"
                            android:layout_width="85dp"
                            android:layout_height="65dp"
                            android:hint="@string/a23" />
                    </com.google.android.material.textfield.TextInputLayout>

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CoordsTextInputLayout"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginEnd="3dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/a31"
                            style="@style/CoordsTextInputEditText"
                            android:layout_width="85dp"
                            android:layout_height="65dp"
                            android:hint="@string/a31" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CoordsTextInputLayout"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/a32"
                            style="@style/CoordsTextInputEditText"
                            android:layout_width="85dp"
                            android:layout_height="65dp"
                            android:hint="@string/a32" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CoordsTextInputLayout"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="3dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/a33"
                            style="@style/CoordsTextInputEditText"
                            android:layout_width="85dp"
                            android:layout_height="65dp"
                            android:hint="@string/a33" />
                    </com.google.android.material.textfield.TextInputLayout>

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/antiClicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"
                android:translationZ="50dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearAllButton"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/clear_all_button"
                android:fontFamily="@font/audiowide"
                android:gravity="start|top"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:text="@string/clear_all"
                android:textColor="@color/bg"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/calculateButton"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="10dp"
                android:background="@drawable/calculate_button"
                android:fontFamily="@font/audiowide"
                android:gravity="bottom|end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/calculate"
                android:textColor="@color/bg"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

        </FrameLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/swtch_theme_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/switch_theme"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>