<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="290dp"
    android:layout_height="290dp"
    android:background="@drawable/text_input"
    android:clickable="true"
    android:focusable="true"
    android:padding="10dp"
    tools:context=".FragmentNumeralResultWindow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/solution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/namuko"
            android:paddingStart="10dp"
            android:text="@string/solution"
            android:textSize="26sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uNExpressionEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/ubuntu_mono_regular"
                android:gravity="center"
                android:hint="@string/expression"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uNAnswerEditText"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cacual_contact_regular"
                android:gravity="center"
                android:hint="@string/answer"
                android:singleLine="true"
                android:textSize="34sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</RelativeLayout>